--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "version": "0.1.1",
     "description": "A Simple Static HTTP Server",
     "main": "index.js",
+    "bin": {
+        "sheepy": "core/index.js"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "bin": {
-        "sheepy": "index.js"
     },
     "repository": {
         "type": "git",
@@ -23,5 +23,9 @@
     "bugs": {
         "url": "https://github.com/YounGoat/nodejs.sheepy/issues"
     },
-    "homepage": "https://github.com/YounGoat/nodejs.sheepy#readme"
+    "homepage": "https://github.com/YounGoat/nodejs.sheepy#readme",
+    "dependencies": {
+        "mime": "^2.4.4",
+        "noda": "^0.5.0"
+    }
 }
